# AiNews

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.coolify.yml  docker-compose.yml  docker-entrypoint.sh  nginx.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
data/: source_candidates.json  sources.json
scripts/: migrate_json_to_db.py
src/ainews/: __init__.py  __main__.py  cli.py  config.py
src/ainews/db/: __init__.py  base.py  models.py  session.py
src/ainews/delivery/: __init__.py  email.py
src/ainews/fetchers/: __init__.py  base.py  orchestrator.py  rss.py  scraper.py
src/ainews/models/: __init__.py  article.py  source.py  summary.py
src/ainews/processing/: __init__.py  dedup.py  extractor.py
src/ainews/sources/: __init__.py  discovery.py  manager.py  validator.py
src/ainews/storage/: __init__.py  json_store.py
src/ainews/summarization/: __init__.py  client.py  summarizer.py
src/ainews/web/: __init__.py  app.py  dependencies.py
src/ainews/web/routes/: __init__.py  api.py  pages.py
src/ainews/web/services/: article_service.py  source_service.py  summary_service.py
src/ainews/web/templates/: archive.html  articles.html  base.html  home.html  sources.html  summary_detail.html
tests/: __init__.py
