[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ainews"
version = "0.1.0"
description = "AI News Aggregator - Collects AI news and generates daily summaries"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    # Data models and config
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # HTTP and parsing
    "httpx>=0.25.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.6.0",
    "lxml>=4.9.0",

    # AI
    "anthropic>=0.18.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",

    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",

    # Utilities
    "filelock>=3.13.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "respx>=0.20.0",
]

[project.scripts]
ainews = "ainews.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ainews"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "respx>=0.20.0",
]
